category_and_subCategory endpoints
