# src/swagger.json
@@ -38,6 +38,14 @@
     {
       "name": "User",
       "description": "API for users in the system"
+    },
+    {
+      "name": "Category",
+      "description": "API for major category in the system"
+    },
+    {
+      "name": "subCategory",
+      "description": "API for subCategory in the system"
     }
   ],
   "consumes": ["application/json"],
@@ -152,6 +160,180 @@
           }
         }
       }
+    },
+    "/category/": {
+      "post": {
+        "tags": ["Category"],
+        "summary": " add a new major category",
+        "requestBody": {
+          "description": "Category Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Category"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "msg": {
+                      "type": "string",
+                      "example": "تم اضافة التصنيف بنجاح"
+                    },
+                    "category": {
+                      "type": "object",
+                      "$ref": "#definitions/Category"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/category/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "description": "ID of the category that we want to match",
+          "type": "string"
+        }
+      ],
+      "put": {
+        "tags": ["Category"],
+        "summary": " update a major category by its id",
+        "requestBody": {
+          "description": "Category Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/updateCategory"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "msg": {
+                      "type": "string",
+                      "example": "تم التعديل بنجاح"
+                    },
+                    "category": {
+                      "type": "object",
+                      "$ref": "#definitions/Category"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/category/subCategory/": {
+      "post": {
+        "tags": ["subCategory"],
+        "summary": " add a new subCategory",
+        "requestBody": {
+          "description": "subCategory Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/subCategory"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "msg": {
+                      "type": "string",
+                      "example": "تم اضافة التصنيف الفرعىى بنجاح"
+                    },
+                    "subCategory": {
+                      "type": "object",
+                      "$ref": "#definitions/subCategory"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/category/subCategory/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "description": "ID of the subCategory that we want to match",
+          "type": "string"
+        }
+      ],
+      "put": {
+        "tags": ["subCategory"],
+        "summary": " update subCategory",
+        "requestBody": {
+          "description": "subCategory Object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/subCategory"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "msg": {
+                      "type": "string",
+                      "example": "تم التعديل بنجاح"
+                    },
+                    "subCategory": {
+                      "type": "object",
+                      "$ref": "#definitions/subCategory"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -247,6 +429,52 @@
         "image": {
           "type": "file",
           "required": false
+        }
+      }
+    },
+    "Category": {
+      "type": "object",
+      "properties": {
+        "nameEn": {
+          "type": "string",
+          "unique": "true"
+        },
+        "nameAr": {
+          "type": "string",
+          "unique": "true"
+        }
+      }
+    },
+    "updateCategory": {
+      "type": "object",
+      "properties": {
+        "nameEn": {
+          "type": "string",
+          "unique": "true",
+          "required": false
+        },
+        "nameAr": {
+          "type": "string",
+          "unique": "true",
+          "required": false
+        }
+      }
+    },
+    "subCategory": {
+      "type": "object",
+      "properties": {
+        "nameEn": {
+          "type": "string",
+          "unique": "true",
+          "required": false
+        },
+        "nameAr": {
+          "type": "string",
+          "unique": "true",
+          "required": false
+        },
+        "categoryId": {
+          "type": "integer"
         }
       }
     },
